--- a/TestWikipedia/Base.lproj/Main.storyboard
+++ b/TestWikipedia/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="elk-GC-LTJ" id="A3f-eq-1sB">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -50,7 +50,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Yax-hp-Bde" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="05Q-Wp-nYo"/>
                             <constraint firstItem="Yax-hp-Bde" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="UUV-SX-s0L"/>
